--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "Codegeex.RepoIndex": true,
   "Codegeex.GenerationPreference": "automatic",
+  "Codegeex.CommitMessageStyle": "ConventionalCommits",
 }
